--- a/codigo/src/main/java/PaginaProvas.form
+++ b/codigo/src/main/java/PaginaProvas.form
@@ -19,7 +19,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="d66f2" layout-manager="GridLayoutManager" row-count="4" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d66f2" layout-manager="GridLayoutManager" row-count="10" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -38,7 +38,7 @@
               <grid id="51e30" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="1" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="9" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-8551544"/>
@@ -181,15 +181,52 @@
                   <text value="Adicionar Provas"/>
                 </properties>
               </component>
-              <component id="34490" class="javax.swing.JButton" binding="editarProvasButton">
+              <component id="ca4c1" class="javax.swing.JButton" binding="importarProvasButton">
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="6" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
                   <font name="Consolas" size="18"/>
                   <foreground color="-1"/>
-                  <text value="Editar Provas"/>
+                  <text value="Importar Provas"/>
+                </properties>
+              </component>
+              <component id="1711a" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                <constraints>
+                  <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="13474" class="javax.swing.JButton">
+                <constraints>
+                  <grid row="6" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Combates"/>
+                </properties>
+              </component>
+              <component id="40295" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="16"/>
+                  <text value="Selecione uma prova"/>
+                </properties>
+              </component>
+              <component id="8147b" class="javax.swing.JButton" binding="adicAtletaÀProvaButton">
+                <constraints>
+                  <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Adic.Atleta à Prova"/>
                 </properties>
               </component>
               <component id="acd2f" class="javax.swing.JButton" binding="eliminarProvasButton">
@@ -203,37 +240,15 @@
                   <text value="Eliminar Provas"/>
                 </properties>
               </component>
-              <component id="ca4c1" class="javax.swing.JButton" binding="importarProvasButton">
+              <component id="34490" class="javax.swing.JButton" binding="editarProvasButton">
                 <constraints>
-                  <grid row="1" column="6" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
                   <font name="Consolas" size="18"/>
                   <foreground color="-1"/>
-                  <text value="Importar Provas"/>
-                </properties>
-              </component>
-              <component id="8147b" class="javax.swing.JButton" binding="adicAtletaÀProvaButton">
-                <constraints>
-                  <grid row="3" column="3" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Adic.Atleta à Prova"/>
-                </properties>
-              </component>
-              <component id="13474" class="javax.swing.JButton">
-                <constraints>
-                  <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Combates"/>
+                  <text value="Editar Provas"/>
                 </properties>
               </component>
             </children>
