--- a/codigo/src/main/java/GerirInscricoes.form
+++ b/codigo/src/main/java/GerirInscricoes.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PaginaProvas">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GerirInscricoes">
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="71ea" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b8cf4" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -19,7 +19,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="d66f2" layout-manager="GridLayoutManager" row-count="10" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="73765" layout-manager="GridLayoutManager" row-count="10" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -35,7 +35,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="51e30" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="214f2" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="9" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -45,7 +45,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="c15c" class="javax.swing.JButton" binding="atletasButtonSide">
+                  <component id="9a035" class="javax.swing.JButton" binding="atletasButtonSide">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -56,7 +56,7 @@
                       <text value="Atletas"/>
                     </properties>
                   </component>
-                  <component id="aa1a4" class="javax.swing.JButton" binding="estatisticasButtonSide">
+                  <component id="334cb" class="javax.swing.JButton" binding="estatisticasButtonSide">
                     <constraints>
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -67,7 +67,7 @@
                       <text value="Estatisticas"/>
                     </properties>
                   </component>
-                  <component id="526b3" class="javax.swing.JButton" binding="sobreButtonSide">
+                  <component id="c81d6" class="javax.swing.JButton" binding="sobreButtonSide">
                     <constraints>
                       <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -78,7 +78,7 @@
                       <text value="Sobre"/>
                     </properties>
                   </component>
-                  <component id="50882" class="javax.swing.JButton" binding="eventosButtonSide">
+                  <component id="e0b12" class="javax.swing.JButton" binding="eventosButtonSide">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -89,7 +89,7 @@
                       <text value="Eventos"/>
                     </properties>
                   </component>
-                  <component id="64f28" class="javax.swing.JButton" binding="loginButtonSide">
+                  <component id="7ec61" class="javax.swing.JButton" binding="loginButtonSide">
                     <constraints>
                       <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -100,7 +100,7 @@
                       <text value="Login"/>
                     </properties>
                   </component>
-                  <component id="778d5" class="javax.swing.JButton" binding="menuInicialButtonSide">
+                  <component id="10335" class="javax.swing.JButton" binding="menuInicialButtonSide">
                     <constraints>
                       <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -111,12 +111,12 @@
                       <text value="Menu Inicial"/>
                     </properties>
                   </component>
-                  <vspacer id="ae951">
+                  <vspacer id="8b3c0">
                     <constraints>
                       <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <component id="ac7b2" class="javax.swing.JButton" binding="provasButtonSide">
+                  <component id="ef2dd" class="javax.swing.JButton" binding="provasButtonSide">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -129,7 +129,7 @@
                   </component>
                 </children>
               </grid>
-              <component id="6bcf7" class="javax.swing.JLabel">
+              <component id="b1260" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -138,7 +138,7 @@
                   <text value="Gestor de Torneios"/>
                 </properties>
               </component>
-              <component id="4a6b7" class="javax.swing.JLabel" binding="nomeUser">
+              <component id="80154" class="javax.swing.JLabel" binding="nomeUser">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -147,7 +147,7 @@
                   <text value="NomeUser"/>
                 </properties>
               </component>
-              <component id="1fcc4" class="javax.swing.JLabel" binding="fotoUser">
+              <component id="87729" class="javax.swing.JLabel" binding="fotoUser">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -158,97 +158,62 @@
                   <verticalAlignment value="0"/>
                 </properties>
               </component>
-              <component id="592ed" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <vspacer id="e9251">
                 <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="6" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <component id="11569" class="javax.swing.JButton" binding="efetuarAcao">
+                <constraints>
+                  <grid row="6" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-3133400"/>
+                  <text value="Realizar Ação"/>
+                </properties>
+              </component>
+              <vspacer id="75689">
+                <constraints>
+                  <grid row="7" column="4" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <component id="17ad6" class="javax.swing.JComboBox" binding="acaoComboBox">
+                <constraints>
+                  <grid row="3" column="4" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
                 <properties>
                   <background color="-8551544"/>
                   <focusable value="false"/>
+                  <model/>
                   <verifyInputWhenFocusTarget value="true"/>
                 </properties>
               </component>
-              <component id="56f4c" class="javax.swing.JButton" binding="adicionarProvasButton">
+              <component id="b2b0" class="javax.swing.JComboBox" binding="atletasComboBox">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="4" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Adicionar Provas"/>
+                  <background color="-8551544"/>
+                  <focusable value="false"/>
+                  <model/>
+                  <verifyInputWhenFocusTarget value="true"/>
                 </properties>
               </component>
-              <component id="ca4c1" class="javax.swing.JButton" binding="importarProvasButton">
+              <component id="81df" class="javax.swing.JComboBox" binding="provasComboBox">
                 <constraints>
-                  <grid row="1" column="6" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Importar Provas"/>
-                </properties>
-              </component>
-              <component id="1711a" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-                <constraints>
-                  <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="13474" class="javax.swing.JButton">
-                <constraints>
-                  <grid row="6" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Combates"/>
-                </properties>
-              </component>
-              <component id="40295" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font size="16"/>
-                  <text value="Selecione uma prova"/>
-                </properties>
-              </component>
-              <component id="8147b" class="javax.swing.JButton" binding="adicAtletaÀProvaButton">
-                <constraints>
-                  <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Gerir Inscrições"/>
-                </properties>
-              </component>
-              <component id="acd2f" class="javax.swing.JButton" binding="eliminarProvasButton">
-                <constraints>
-                  <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Eliminar Provas"/>
-                </properties>
-              </component>
-              <component id="34490" class="javax.swing.JButton" binding="editarProvasButton">
-                <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13947344"/>
-                  <font name="Consolas" size="18"/>
-                  <foreground color="-1"/>
-                  <text value="Editar Provas"/>
+                  <background color="-8551544"/>
+                  <focusable value="false"/>
+                  <model/>
+                  <verifyInputWhenFocusTarget value="true"/>
                 </properties>
               </component>
             </children>
