--- a/codigo/src/main/java/PaginaProvas.form
+++ b/codigo/src/main/java/PaginaProvas.form
@@ -218,7 +218,7 @@
                   <text value="Selecione uma prova"/>
                 </properties>
               </component>
-              <component id="8147b" class="javax.swing.JButton" binding="adicAtletaÀProvaButton">
+              <component id="8147b" class="javax.swing.JButton" binding="gerirInscricoesButton">
                 <constraints>
                   <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
