--- a/codigo/src/main/java/PaginaCombates.form
+++ b/codigo/src/main/java/PaginaCombates.form
@@ -173,7 +173,7 @@
                   <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="3947f" class="javax.swing.JButton" binding="editarButton">
+              <component id="3947f" class="javax.swing.JButton" binding="registarButton">
                 <constraints>
                   <grid row="13" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
